--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     "require": {
         "php": ">=7.0.0",
         "akrabat/rka-slim-session-middleware": "^2.0",
+        "codeception/codeception": "*",
+        "doctrine/orm": "v2.5.6",
         "monolog/monolog": "^1.21",
         "roave/security-advisories": "dev-master",
         "slim/csrf": "^0.8.1",
@@ -22,8 +24,7 @@
         "slim/slim": "^3.5",
         "slim/twig-view": "^2.2",
         "swiftmailer/swiftmailer": "^6.0",
-        "symfony/yaml": "^3.1",
-        "doctrine/orm": "v2.5.6"
+        "symfony/yaml": "^3.1"
     },
     "autoload": {
         "psr-4": {
@@ -36,5 +37,8 @@
     "config": {
         "optimize-autoloader": true,
         "sort-packages": true
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.2"
     }
 }
