--- a/composer.json
+++ b/composer.json
@@ -13,18 +13,18 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "akrabat/rka-slim-session-middleware": "^2.0",
+        "php": ">=7.1.0",
+        "akrabat/rka-slim-session-middleware": ">=2.0",
         "codeception/codeception": "*",
         "doctrine/orm": "v2.5.6",
         "monolog/monolog": "^1.21",
         "roave/security-advisories": "dev-master",
-        "slim/csrf": "^0.8.1",
-        "slim/flash": "^0.2.0",
-        "slim/slim": "^3.5",
-        "slim/twig-view": "^2.2",
-        "swiftmailer/swiftmailer": "^6.0",
-        "symfony/yaml": "^3.1"
+        "slim/csrf": ">=0.8.1",
+        "slim/flash": ">=0.2.0",
+        "slim/slim": ">=3.5",
+        "slim/twig-view": ">=2.2",
+        "swiftmailer/swiftmailer": ">=6.0",
+        "symfony/yaml": ">=3.1"
     },
     "autoload": {
         "psr-4": {
@@ -39,6 +39,7 @@
         "sort-packages": true
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2"
+        "roave/security-advisories": "dev-master",
+        "phpunit/phpunit": ">=6.2"
     }
 }
