--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Site for the Concamarise Eventi project.",
   "main": "index.js",
   "dependencies": {
-    "bulma": "^0.6.1",
-    "uglifycss": "0.0.27"
+    "bulma": "^0.6.2",
+    "uglifycss": "^0.0.27"
   },
   "devDependencies": {},
   "scripts": {
